# shallot

./: .gitignore  CMakeLists.txt  README.md  action.cpp  action.h  app.js  bundle.sh  debug.sh  global.h  main.cpp  package-lock.json  package.json  page.cpp  page.h  settings.json  test.cpp
extension/: main.js  manifest.json
public/javascripts/: directory.bundle.js  directory.js  editor.bundle.js  editor.js  login.js  main.bundle.js  main.js  themes.js
public/stylesheets/: style.css
routes/: index.js
src/: controller.cpp  controller.h  global.h  main.cpp  page.cpp  page.h  ruler.cpp  ruler.h
views/: error.jade  index.jade  layout.jade  login.jade
